# fasthtml-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  pyproject.toml
src/mess_with_fasthtml/: __init__.py
src/mess_with_fasthtml/infra/: infra_stack.py
src/mess_with_fasthtml/web/: main.py
