[project]
name = "mess-with-fasthtml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brian Dawn", email = "brian.t.dawn@gmail.com" }
]
dependencies = [
    "python-fasthtml>=0.3.2",
    "ruff>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
extend-ignore = ["F403", "F405"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mess_with_fasthtml"]
